--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 }
 
 body {
-  background-color: #ffc2d1;
+  height: 100vh;
+  background-color: #ffcfdf;
+  background-image: linear-gradient(315deg, #ffcfdf 20%, #b0f3f1 74%);
 }
 
 .App {
@@ -101,6 +103,12 @@ body {
 }
 
 @media (max-width: 1150px) {
+  body {
+    height: 100%;
+  }
+  .title {
+    font-size: 40px;
+  }
   .list {
     max-width: 700px;
   }
